# film-and-television-data-analysis

./: .gitignore  README-EN.md  README.md  generate_report_data.py  main.py  pyproject.toml
analysis/: __init__.py  analyzer.py  data_loader.py  predictor.py
analysis_results/data/: director_analysis.json  genre_analysis.json  roi_analysis.json  roi_by_genre.json  scatter_budget_revenue.json  yearly_trends.json
api/: __init__.py  app.py
docs/: Step1-数据源说明.md  Step2-影视数据分析报告.md
visualization/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
visualization/src/: App.svelte  app.css
visualization/src/lib/api/: index.ts
visualization/src/lib/charts/: BarChart.svelte  HeatmapChart.svelte  LineChart.svelte  PieChart.svelte  ScatterPlot.svelte  index.ts
visualization/src/lib/components/: Card.svelte  Loading.svelte  StatCard.svelte  Tabs.svelte  index.ts
visualization/src/pages/: Analysis.svelte  Overview.svelte  Prediction.svelte  RoiAnalysis.svelte  Trends.svelte  index.ts
visualization/src/utils/: index.ts
